--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "predeploy": "npm start",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
