package json changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gitname.github.io/ToDoList",
+  "homepage": "http://mwing728.github.io/ToDoList",
   "name": "react-todo",
   "version": "0.1.0",
   "private": true,
